# RPGAtlas

./: .gitignore  AGENTS.md  Atlas_Quest_Coop.json  README.md  Rebuild-Desktop-App.bat  eslint.config.mjs  index.html  package-lock.json  package.json  play.html  playwright.config.mjs  vitest.config.mjs  vitest.net.config.mjs
css/: editor.css  play.css
docs/: MULTIPLAYER_ROADMAP.md  MZ_MV_MIGRATION_ROADMAP.md  PROJECT_FOLDERS_ROADMAP.md  harbor-1-spec.md  harbor-2-spec.md  harbor-3-spec.md  harbor-4-spec.md  harbor-5-spec.md  harbor-6-spec.md  mig-1-spec.md  mig-4-spec.md  mig-6-spec.md  mp-0-spec.md  mp-1-spec.md  mp-2-spec.md  mp-3-spec.md  mp-4-spec.md  mp-5-spec.md  (+13 more)
docs-site/: Adding-Your-Own-Art-and-Music.html  Advanced-Map-Editor.html  Audio.html  Battles-and-States.html  Characters-and-Custom-Assets.html  Coming-from-RPG-Maker.html  Dialogue-and-Cutscenes.html  Events.html  Generators.html  Hosting-a-World.html  Installation-and-Setup.html  Making-Your-Game-Multiplayer.html  Maps-and-Tiles.html  Message-Text-Codes.html  Migration-Guide.html  Online-Safety.html  Plugin-and-Script-API.html  Plugins.html  Publishing-Your-Game.html  Resources-and-Glossary.html  The-Asset-Browser.html  The-Database.html  The-Editor-Interface.html  Troubleshooting-and-FAQ.html  Visual-UI-and-HUD-Designer.html  Your-First-Game.html  Your-Game-Is-a-Folder.html  index.html
src-tauri/: Cargo.toml  README.md  playtest-idle.html  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: launch.rs  lib.rs  main.rs  project.rs  project_assets.rs  project_paths.rs
(+356 files in other folders)
