[package]
name = "rpgatlas"
version = "2.0.0"
description = "RPGAtlas desktop editor"
authors = ["RPGAtlas contributors"]
license = "GPL-3.0-or-later"
edition = "2021"
rust-version = "1.77.2"

# The library holds the app logic so the same code can power desktop and
# (future) mobile entry points; main.rs is a thin shim over it.
[lib]
name = "rpgatlas_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
# Project Harbor H5·B: one running instance. A second launch (e.g. double-clicking
# another game) forwards its argv to the running app's callback and exits, instead of
# spawning an orphan window; the callback focuses main and opens the requested project.
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
# Windows-friendly canonicalization (no \\?\ UNC prefix) for the project-folder
# path guard (project_paths.rs, Harbor H1). Already resolved transitively; pinned
# here so the guard module owns it explicitly.
dunce = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
